--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,3 +1,11 @@
-.toggle-planet {
+.button-row {
+  margin: 0 0 1rem 0;
+}
+
+.button-row button {
+  margin-right: 1rem;
+}
+
+.star-wars-wiki-app .row {
   margin-bottom: 1rem;
 }
